# utils-cpp

./: .gitignore  CMakeLists.txt  base.h  container.h  debug.h  libloader.cpp  libloader.h  os.cpp  os.hpp  pystr.h  readme.md  stl2.h  typeext.h  utils.cpp  wchar.cpp
fmt/: CMakeLists.txt  chrono.h  color.h  compile.h  format-inl.h  locale.h  posix.h  ranges.h
include/: base.h  container.h  libloader.h  os.h  pystr.h  utils.h
include/pystring/: pystring.h
pystring/: CMakeLists.txt  pystring.cpp
test/: CMakeLists.txt  base.cpp  container.cpp  json.cpp  json_demo.json  nngpp.cpp  pybind11.cpp  pybind11_demo.py  pystr.cpp  spdlog.cpp
unvalidated/: wchar.h
